disabled/kube-prometheus-stack/overlays/prod/ingressroute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: grafana-dashboard
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-dns01-production
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`grafana.lab.supermorphic.com`)
      kind: Rule
      services:
        - name: kube-prometheus-stack-grafana
          port: 80
  tls:
    secretName: grafana-dashboard-tls
